native/include/omnivad.h


typedef enum {
    OMNI_OK                  =  0,
    OMNI_ERR_NULL_HANDLE     = -1,
    OMNI_ERR_NULL_POINTER    = -2,
    OMNI_ERR_LOAD_BUNDLE     = -3,
    OMNI_ERR_LOAD_PARAM      = -4,
    OMNI_ERR_LOAD_MODEL      = -5,
    OMNI_ERR_LOAD_CMVN       = -6,
    OMNI_ERR_NO_FRAMES       = -7,
    OMNI_ERR_INFERENCE       = -8,
    OMNI_ERR_OUT_OF_MEMORY   = -9,
    OMNI_ERR_INVALID_ARG     = -10,
} OmniErrorCode;
typedef struct {
    float start;    
    float end;      
} OmniSegment;
typedef enum {
    OMNI_AED_SPEECH  = 0,
    OMNI_AED_SINGING = 1,
    OMNI_AED_MUSIC   = 2,
} OmniAedClass;
typedef struct {
    float start;            
    float end;              
    OmniAedClass cls;       
    float confidence;       
} OmniAedSegment;
typedef struct {
    float threshold;            
    int   smooth_window_size;   
    int   min_speech_frames;    
    int   min_silence_frames;   
    int   max_speech_frames;    
    int   merge_silence_frames; 
    int   extend_speech_frames; 
} OmniPostConfig;
OMNIVAD_API OmniPostConfig omni_post_config_default(void);
typedef struct OmniVadCtx* OmniVadHandle;
OMNIVAD_API OmniVadHandle omni_vad_create(const char* bundle_path, int* out_error);
OMNIVAD_API OmniVadHandle omni_vad_create_from_buffer(const void* data, int size, int* out_error);
OMNIVAD_API int omni_vad_detect(
    OmniVadHandle handle,
    const float* audio_data,
    int num_samples,
    const OmniPostConfig* config,
    OmniSegment** out_segments,
    int* out_count
);
OMNIVAD_API int omni_vad_detect_int16(
    OmniVadHandle handle,
    const int16_t* audio_data,
    int num_samples,
    const OmniPostConfig* config,
    OmniSegment** out_segments,
    int* out_count
);
OMNIVAD_API int omni_vad_detect_probs(
    OmniVadHandle handle,
    const float* audio_data, int num_samples,
    float** out_probs, int* out_frames
);
OMNIVAD_API int omni_vad_detect_probs_int16(
    OmniVadHandle handle,
    const int16_t* audio_data, int num_samples,
    float** out_probs, int* out_frames
);
OMNIVAD_API void omni_vad_destroy(OmniVadHandle handle);
typedef struct OmniStreamVadCtx* OmniStreamVadHandle;
typedef struct {
    float confidence;       
    bool  is_speech;        
    int   frame_offset;     
} OmniStreamVadResult;
OMNIVAD_API OmniStreamVadHandle omni_stream_vad_create(
    const char* bundle_path,
    float threshold,
    int* out_error
);
OMNIVAD_API OmniStreamVadHandle omni_stream_vad_create_from_buffer(
    const void* data,
    int size,
    float threshold,
    int* out_error
);
OMNIVAD_API OmniStreamVadHandle omni_stream_vad_clone(
    OmniStreamVadHandle handle,
    int* out_error
);
OMNIVAD_API int omni_stream_vad_process(
    OmniStreamVadHandle handle,
    const int16_t* audio_data,
    int num_samples,
    OmniStreamVadResult* result
);
OMNIVAD_API int omni_stream_vad_detect_full(
    OmniStreamVadHandle handle,
    const float* audio_data,
    int num_samples,
    float** out_probs,
    int* out_frames
);
OMNIVAD_API int omni_stream_vad_detect_full_int16(
    OmniStreamVadHandle handle,
    const int16_t* audio_data,
    int num_samples,
    float** out_probs,
    int* out_frames
);
OMNIVAD_API void omni_stream_vad_reset(OmniStreamVadHandle handle);
OMNIVAD_API int omni_stream_vad_get_frame_offset(OmniStreamVadHandle handle);
OMNIVAD_API void omni_stream_vad_destroy(OmniStreamVadHandle handle);
typedef struct OmniAedCtx* OmniAedHandle;
typedef struct {
    OmniPostConfig speech;
    OmniPostConfig singing;
    OmniPostConfig music;
} OmniAedPostConfig;
OMNIVAD_API OmniAedPostConfig omni_aed_post_config_default(void);
OMNIVAD_API OmniAedHandle omni_aed_create(const char* bundle_path, int* out_error);
OMNIVAD_API OmniAedHandle omni_aed_create_from_buffer(const void* data, int size, int* out_error);
OMNIVAD_API int omni_aed_detect(
    OmniAedHandle handle,
    const float* audio_data,
    int num_samples,
    const OmniAedPostConfig* config,
    OmniAedSegment** out_segments,
    int* out_count
);
OMNIVAD_API int omni_aed_detect_int16(
    OmniAedHandle handle,
    const int16_t* audio_data,
    int num_samples,
    const OmniAedPostConfig* config,
    OmniAedSegment** out_segments,
    int* out_count
);
OMNIVAD_API int omni_aed_detect_probs(
    OmniAedHandle handle,
    const float* audio_data, int num_samples,
    float** out_probs, int* out_frames
);
OMNIVAD_API int omni_aed_detect_probs_int16(
    OmniAedHandle handle,
    const int16_t* audio_data, int num_samples,
    float** out_probs, int* out_frames
);
OMNIVAD_API void omni_aed_destroy(OmniAedHandle handle);
typedef struct {
    float start;            
    float end;              
    int   seg_start_idx;    
    int   seg_count;        
} OmniChunk;
typedef enum {
    OMNI_CHUNK_GREEDY      = 0,
    OMNI_CHUNK_LONGEST_GAP = 1,
} OmniChunkMode;
typedef struct {
    float max_chunk_secs;    
    float max_gap_secs;      
    float pad_onset_secs;    
    float pad_offset_secs;   
    float min_speech_secs;   
    float min_silence_secs;  
    int   mode;              
} OmniChunkConfig;
OMNIVAD_API OmniChunkConfig omni_chunk_config_default(void);
OMNIVAD_API int omni_merge_chunks(
    const OmniSegment*     segments,
    int                    num_segments,
    const OmniChunkConfig* config,
    OmniChunk**            out_chunks,
    int*                   out_count
);
OMNIVAD_API void omni_free(void* ptr);
OMNIVAD_API const char* omni_error_string(int error_code);